--- a/boletin-ejercicioUD3/ejercicio2.html
+++ b/boletin-ejercicioUD3/ejercicio2.html
@@ -12,6 +12,10 @@
 <h1>Biografía de Tim Berners Lee</h1>
 <p><b>Berners-Lee</b> trabajó en el <b>CERN</b> desde junio hasta diciembre de 1980. Durante ese tiempo, propuso un proyecto basado en el <em>hipertexto</em> para facilitar la forma de compartir y la puesta al día de la información entre investigadores. En este periodo también construyó un programa llamado <b>ENQUIRE</b>que no llegó a ver la luz.</p>
 
+<p>Después de dejar el <b>CERN</b>, en 1980, se fue a trabajar a la empresa de <em>John Poole Image Computer System Ltd...</em> pero regresó al <b>CERN</b> otra vez en 1984.</p>
+
+<h2>El nacimiento de la web</h2>
+
 </body>
 
 </html>
