--- a/boletin-ejercicioUD3/ejercicio2.html
+++ b/boletin-ejercicioUD3/ejercicio2.html
@@ -28,6 +28,15 @@
 
 <p>Debido a que tanto <b>el software del servidor como del cliente fue liberado de forma gratuita</b> desde el CERN, el corazón de Internet Europeo en esa época, su difusión fue muy rápida. El número de servidores Web pasó de veintiséis en 1992 a doscientos en octubre de 1995 lo que refleja cual fue la velocidad de la difusión de internet. </p>
 
+<h2>El nacimiento del W3C</h2>
+
+<p>En 1994 entró en el <em>Laboratorio de Ciencias de la Computación e Inteligencia Artificial del Massachussetts Institute of Technology.</em> Se trasladó a EE.UU. y puso en marcha el <b>W3C</b>, que dirige actualmente.</p>
+
+<blockquote>
+El <b>W3C</b> es un organismo internacional de estandarización de tegnologías Web dirigido conjuntamente por el <em>Instituto tecnológico de Massachussetts </em>, el <em>ERCIM</em> francés y la <em>Universidad de keio</em> en Japón. Este organismo decidió que todos sus estándares fuesen libres, es decir, que los pudiese utilizar todo el mundo libremente sin coste alguno, lo que sin lugar a dudas fue una de las grandes razones para que la Web haya llegado a tener la importancia que tiene hoy en día.
+</blockquote>
+
+<p>En su libro <em>Tejiendo la red</em>, publicado en 1999, Berners-Lee explica por qué <b>la tecnología web es libre y gratis. Se considera al mismo tiempo el inventor y el protector de la web.</b></p>
 </body>
 
 </html>
