--- a/boletin-ejercicioUD3/ejercicio3.html
+++ b/boletin-ejercicioUD3/ejercicio3.html
@@ -26,7 +26,7 @@ Nació en el sudoeste de Londres en 1955. Sus padres eran matemáticos y formaro
 Manchester Mark I (una de las primeras computadoras). Durante el tiempo que estuvo en la universidad, construyó una
 computadora con una soldadora, circuitos TTL, un procesador Motorola 68000 y un televisor viejo. Se graduó en física en
 1976 en el Queen's College de la Universidad de Oxford. Conoció a su primera esposa en este periodo. En 1978, trabajó en
-D.G. Nash Limited (también en Poole) escribió un sistema operativo.
+<em>D.G. Nash Limited </em>(también en Poole) escribió un sistema operativo.
 </p>
 
 <h2>Desarrollo de su carrera</h2>
@@ -38,20 +38,20 @@ periodo también construyó un programa llamado Enquire que no llegó a ver la l
 </p>
 
 <p>
-Después de dejar el CERN, en 1980, se fue a trabajar a la empresa de John Poole Image Computer Systems Ltd., pero
-regresó al CERN otra vez en 1984.
+Después de dejar el <b>CERN</b>, en 1980, se fue a trabajar a la empresa de <em>John Poole Image Computer Systems Ltd.</em>, pero
+regresó al <b>CERN</b> otra vez en 1984.
 </p>
 
 <p>
-En 1989, el CERN era el nodo de Internet más grande de Europa y Berners-Lee vio la oportunidad de unir Internet y el
-hipertexto (HTTP y HTML), de lo que surgiría la World Wide Web. Desarrolló su primera propuesta de la Web en marzo de
+En 1989, el <b>CERN</b> era el nodo de Internet más grande de Europa y Berners-Lee vio la oportunidad de unir Internet y el
+hipertexto <b>(HTTP y HTML)</b>, de lo que surgiría la World Wide Web. Desarrolló su primera propuesta de la Web en marzo de
 1989, pero no tuvo mucho eco, por lo que en 1990 y con la ayuda de Robert Cailliau, hicieron una revisión que fue
 aceptada por su gerente, Mike Sendall. Usó ideas similares a las que había usado en el sistema Enquire para crear la
 World Wide Web, para esto diseñó y construyó el primer navegador (llamado WorldWideWeb y desarrollado con NextStep) y el
 primer servidor web al que llamó httpd (HyperText Transfer Protocol daemon).
 </p>
 
-<p>Fuente: Wikipedia</p>
+<p>Fuente: <em>Wikipedia</em></p>
 
 </body>
 
