--- a/boletin-ejercicioUD3/ejercicio3.html
+++ b/boletin-ejercicioUD3/ejercicio3.html
@@ -14,8 +14,8 @@
 <p>
 Sir Timothy "Tim" John Berners-Lee (Londres, Reino Unido, 8 de junio de 1955) es un científico de la computación
 británico, conocido por ser el padre de la Web. Estableció la primera comunicación entre un cliente y un servidor usando
-el protocolo HTTP en noviembre de 1989. En octubre de 1994 fundó el Consorcio de la World Wide Web (W3C) con sede en el
-MIT, para supervisar y estandarizar el desarrollo de las tecnologías sobre las que se fundamenta la Web y que permiten
+el protocolo <b>HTTP</b> en noviembre de 1989. En octubre de 1994 fundó el <em>Consorcio de la World Wide Web</em> (<b>W3C</b>) con sede en el
+<b>MIT</b>, para supervisar y estandarizar el desarrollo de las tecnologías sobre las que se fundamenta la Web y que permiten
 el funcionamiento de Internet.
 </p>
 
@@ -24,9 +24,9 @@ el funcionamiento de Internet.
 <p>
 Nació en el sudoeste de Londres en 1955. Sus padres eran matemáticos y formaron parte del equipo que construyó el
 Manchester Mark I (una de las primeras computadoras). Durante el tiempo que estuvo en la universidad, construyó una
-computadora con una soldadora, circuitos TTL, un procesador Motorola 68000 y un televisor viejo. Se graduó en física en
-1976 en el Queen's College de la Universidad de Oxford. Conoció a su primera esposa en este periodo. En 1978, trabajó en
-<em>D.G. Nash Limited </em>(también en Poole) escribió un sistema operativo.
+computadora con una soldadora, circuitos <b>TTL</b>, un procesador Motorola 68000 y un televisor viejo. Se graduó en física en
+1976 en el <em>Queen's College de la Universidad de Oxford</em>. Conoció a su primera esposa en este periodo. En 1978, trabajó en
+<em>D.G. Nash Limited </em>(también en <em>Poole</em>) escribió un sistema operativo.
 </p>
 
 <h2>Desarrollo de su carrera</h2>
