--- a/Ejercicio Links.html
+++ b/Ejercicio Links.html
@@ -29,7 +29,7 @@ cindigo (denominado código HTML) para s defanción de contenido de sua página 
 un astindar a cargo de la WIC. organización dekandala astandarización ide casi todas las tecnologus ligades a la anh,
 sobre todo en lo referente a sai escritica a unywetación. Es el Imgtaje con el que se definen las pagans weh
 </p>
-<p>Foende <a href="http :://es wikipedia org/wiki/HTML">HTML</a> Wikipedia</p>
+<p>Foende <a href="http :://es wikipedia.org/wiki/HTML">HTML</a> Wikipedia</p>
 
 
 <h2>HTTP</h2>
@@ -40,7 +40,7 @@ Force, colaboración que culminé en 1999 con la putilicación de una serie de R
 2016 que especifica la versión 1.1
 </p>
 
-<p>Fuente: <a href="http :://es wikipedia org/wiki/Hypertext_Transfer_Protocol">HTTP</a> Wikipedia</p>
+<p>Fuente: <a href="http :://es wikipedia.org/wiki/Hypertext_Transfer_Protocol">HTTP</a> Wikipedia</p>
 
 <h2>URL</h2>
 <b>Un localizador de recursos uniforme</b> o URL, siglas en ingles de la Reumper Lover es no identificador de recursos uniformue
@@ -48,6 +48,6 @@ Force, colaboración que culminé en 1999 con la putilicación de una serie de R
 Están formades por un secuencia de acactares, de acuerdo a un formato modelivo y estándar, que designa recurves an wan
 red, come Intermet
 </p>
-<p>Fuente <a href="http :://es wikipedia org/wiki/Localizador_de_recursos_uniforme">URL</a> Wikipedia</p>
+<p>Fuente <a href="http :://es wikipedia.org/wiki/Localizador_de_recursos_uniforme">URL</a> Wikipedia</p>
 
 </html>
