--- a/Ejercicio Links.html
+++ b/Ejercicio Links.html
@@ -29,7 +29,7 @@ cindigo (denominado código HTML) para s defanción de contenido de sua página 
 un astindar a cargo de la WIC. organización dekandala astandarización ide casi todas las tecnologus ligades a la anh,
 sobre todo en lo referente a sai escritica a unywetación. Es el Imgtaje con el que se definen las pagans weh
 </p>
-<p>Fuente <a href="http://es.wikipedia.org/wiki/HTML">HTML</a> Wikipedia</p>
+<p>Fuente <a href="http://es.wikipedia.org/wiki/HTML" target="_blank">HTML</a> Wikipedia</p>
 
 
 <h2>HTTP</h2>
