--- a/boletin-ejercicioUD3/ejercicio21.html
+++ b/boletin-ejercicioUD3/ejercicio21.html
@@ -9,35 +9,54 @@
 </head>
 
 <br>
-<a href="">1. Qué es HTML</a>
+<a href="./ejercicio1.html">1. Qué es HTML</a>
 <br></br>
-<a href="">2. Primer documento HTML</a>
+<a href="./ejercicio2.html">2. Primer documento HTML</a>
 <pre>
         [EJERCICIO 1] Crear primer documento HTML
 </pre>
-<a href="">3. Comentarios</a>
+<a href="./ejercicio19.html">3. Comentarios</a>
 <pre>
         [EJERCICIO 2] Crear documento HTML con comentarios
 </pre>
-<a href="">4. Estilos</a>
+<a href="www.youtube.com">4. Estilos</a>
 <pre>
         [EJERCICIO 3] Cuatro párrafos con estilos
 </pre>
-<a href="">5. Párrafos</a>
+<a href="./ejercicio22.html">5. Párrafos</a>
 <pre>
         [EJERCICIO 4] Datos y números
 </pre>
-<a href="">6. Formato de texto</a>
+<a href="./ejercicio26.html">6. Formato de texto</a>
 <pre>
         [EJERCICIO 5] Formatos de texto
 </pre>
-<a href="">7. Cabezeras</a>
-
-
-
-
-
-
+<a href="./ejercicio25.html">7. Cabeceras</a>
+<br><br>
+<a href="./ejercicio25.html">8. Enlaces</a>
+<pre>
+        [EJERCICIO 6] Enlaces favoritos
+</pre>
+<a href="www.twitch.com">9. Listas</a>
+<pre>
+        [EJERCICIO 7] Listas de enlace
+</pre>
+<a href="./">10. Imágenes</a>
+<pre>
+        [EJERCICIO 8] Receta de patatas fritas
+</pre>
+<a href="./">11. Tablas</a>
+<pre>
+        [EJERCICIO 9] Grupo de música(Queen)
+</pre>
+<a href="./">12. Divisiones</a>
+<pre>
+        [EJERCICIO 10] Diseño fluido con dos columnas
+</pre>
+<a href="./">13. Formularios</a>
+<pre>
+        [EJERCICIO 11] Notificar una incidencia
+</pre>
 
 
 
