--- a/boletin-ejercicioUD3/ejercicio22.html
+++ b/boletin-ejercicioUD3/ejercicio22.html
@@ -17,13 +17,11 @@
 
     <p>Este es mi enlace a <a href="./ejercicio21.html">enlace3.html</a></p>
 
-    <p>Si quieres leer el periódico El Mundo haz clic <a href="www.reddit.com">Aquí.</a></p>  
+    <p>Si quieres leer el periódico El Mundo haz clic <a href="www.reddit.com">aquí.</a></p>  
 
+    <p>Si quieres leer el periódico El País haz clic <a href="www.reddit.com">aquí.</a></p>
 
-    <pre>
-
-
-    </pre>
+    <p>Si quieres leer el periódico Marca haz clic <a href="www.reddit.com">aquí.</a></p>
 </body>
 
 </html>
