--- a/boletin-ejercicioUD3/ejercicio23.html
+++ b/boletin-ejercicioUD3/ejercicio23.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicio23</title>
+    <style>
+        h1 {
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-<tr>
-    <p>Primera página</p>
+    <h1>Primera página</h1>
     <p>Enlace a la <a href="./ejercicio25.html">página segunda</a></p>
     <p>Enlace a la página de <a href="www.w3school.com">Taller</a></p>
-    <p>Enlace a un <a href="">archivo PDF</a>de mi carpeta</p>
-</tr>
-
-
-
+    <p>Enlace a un <a href="./ejercicio31.html">archivo PDF</a> de mi carpeta</p>
 </body>
 </html>
