--- a/boletin-ejercicioUD3/Ej28-1.html
+++ b/boletin-ejercicioUD3/Ej28-1.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejercicio28</title>
+    <title>Ejercicio28-1</title>
 </head>
 
 <body>
-<h1>Página principal.</h1>
-<a href="./Ej28-1.html">Noticias</a>
+    <h1>Noticias.</h1>
+    <a href="./ej28-2.html">Salir</a>
 
 </body>
+
 </html>
