--- a/boletin-ejercicioUD3/ej28-2.html
+++ b/boletin-ejercicioUD3/ej28-2.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejercicio28</title>
+    <title>Ejercicio28-2</title>
 </head>
 
 <body>
-<h1>Página principal.</h1>
-<a href="./Ej28-1.html">Noticias</a>
+
+    <a href="https://www.google.com/?hl=es">Buscador Google</a>
 
 </body>
+
 </html>
