--- a/boletin-ejercicioUD3/ejercicio27.html
+++ b/boletin-ejercicioUD3/ejercicio27.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejercicio26</title>
+    <title>Ejercicio27</title>
 </head>
 
 <body>
@@ -35,6 +35,10 @@
 
     <h2>4. Esponjas</h2>
     <p>Parazoos; sin simetría definida; cuerpo perforado por poros inhalantes</p>
+    <p>Fotografía</p>
+
+    <h2>5. Nematodos</h2>
+    <p>Gusanos pseudocelomados de sección circular</p>
     <p>Fotografía</p>
 </body>
 </html>
