cambios en enlaces

--- a/boletin-ejercicioUD3/ejercicio26.html
+++ b/boletin-ejercicioUD3/ejercicio26.html
@@ -9,11 +9,11 @@
 </head>
 
 <body>
-    <a href="">Enlace número 1</a>
-    <a href="">Enlace número 2</a>
-    <a href="">Enlace número 3</a>
-    <a href="">Enlace número 4</a>
-    <a href="">Enlace número 5</a>
+    <a href="https://es.wikipedia.org/wiki/Portal:Moluscos">Enlace número 1</a>
+    <a href="./Ej28-1.html">Enlace número 2</a>
+    <a href="./ejercicio3.html">Enlace número 3</a>
+    <a href="./ejercicio27.html">Enlace número 4</a>
+    <a href="./ejercicio17.html">Enlace número 5</a>
 </body>
 
 </html>
