--- a/boletin-ejercicioUD3/ejercicio27.html
+++ b/boletin-ejercicioUD3/ejercicio27.html
@@ -11,11 +11,11 @@
 <body>
 <h1>REINO ANIMAL</h1>
     <pre>
-    1. <a href="">Artrópodos</a>
-    2. <a href="">Equinodermos</a>
-    3. <a href="">Moluscos</a>
-    4. <a href="">Esponjas</a>
-    5. <a href="">Nematodos</a>
+    1. <a href="https://es.wikipedia.org/wiki/Portal:Artr%C3%B3podos">Artrópodos</a>
+    2. <a href="https://gl.wikipedia.org/wiki/Equinodermos">Equinodermos</a>
+    3. <a href="https://es.wikipedia.org/wiki/Portal:Moluscos">Moluscos</a>
+    4. <a href="https://es.wikipedia.org/wiki/Esponja">Esponjas</a>
+    5. <a href="https://es.wikipedia.org/wiki/Nematoda">Nematodos</a>
     </pre>
 
     <h2>1. Artrópodos</h2>
