--- a/boletin-ejercicioUD3/ejercicio25.html
+++ b/boletin-ejercicioUD3/ejercicio25.html
@@ -9,11 +9,11 @@
 </head>
 
 <body>
-    <a href="">Enlace con el estilo por defecto</a>
-    <a href="">Enlace de color rojo</a>
-    <a href="">Enlace sin subrayado</a>
-    <a href="">Enlace muy importante</a>
-    <a href="">Enlace con un estilo raro</a>
+    <a href="https://es.wikipedia.org/wiki/Python">Enlace con el estilo por defecto</a>
+    <a href="https://es.wikipedia.org/wiki/Java_(lenguaje_de_programaci%C3%B3n)">Enlace de color rojo</a>
+    <a href="https://es.wikipedia.org/wiki/Esponja">Enlace sin subrayado</a>
+    <a href="https://es.wikipedia.org/wiki/HTML">Enlace muy importante</a>
+    <a href="https://en.wikipedia.org/wiki/CSS">Enlace con un estilo raro</a>
 </body>
 
 </html>
