--- a/boletin-ejercicioUD3/ejercicio30.html
+++ b/boletin-ejercicioUD3/ejercicio30.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Contacto</h1>
-    <a href="mailto:pepe20cs@alumnos.alborfp.com?Subject=hola que pasa cuanto tiempo.">Enviar mail</a>
+    <a href="mailto:pepe20cs@alumnos.alborfp.com?Subject=Notas asignatura.">Enviar mail</a>
 
 </body>
 
