--- a/boletin-ejercicioUD3/ejercicio21.html
+++ b/boletin-ejercicioUD3/ejercicio21.html
@@ -5,58 +5,75 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ejercicio22</title>
+    <title>ejercicio21</title>
 </head>
 
 <br>
-<a href="./ejercicio1.html">1. Qué es HTML</a>
+<!--1-->
+<ol type="1">
+<li><a href="./ejercicio1.html">Qué es HTML</a></li>
 <br></br>
-<a href="./ejercicio2.html">2. Primer documento HTML</a>
+<!--2 Primer Documento-->
+<li><a href="./ejercicio2.html"> Primer documento HTML</a></li>
 <pre>
         [EJERCICIO 1] Crear primer documento HTML
 </pre>
-<a href="./ejercicio19.html">3. Comentarios</a>
+<!--3 Comentarios-->
+<li><a href="./ejercicio19.html">Comentarios</a></li>
 <pre>
         [EJERCICIO 2] Crear documento HTML con comentarios
 </pre>
-<a href="www.youtube.com">4. Estilos</a>
+<!--4 Estilos-->
+<li><a href="www.youtube.com">Estilos</a></li>
 <pre>
         [EJERCICIO 3] Cuatro párrafos con estilos
 </pre>
-<a href="./ejercicio22.html">5. Párrafos</a>
+<!--5 Parrafos-->
+<li><a href="./ejercicio22.html">Párrafos</a></li>
 <pre>
         [EJERCICIO 4] Datos y números
 </pre>
-<a href="./ejercicio26.html">6. Formato de texto</a>
+<!--6 Formato Texto-->
+<li><a href="./ejercicio26.html">Formato de texto</a></li>
 <pre>
         [EJERCICIO 5] Formatos de texto
 </pre>
-<a href="./ejercicio25.html">7. Cabeceras</a>
+<!--7 Cabezeras-->
+<li><a href="./ejercicio25.html">Cabeceras</a></li>
 <br><br>
-<a href="./ejercicio25.html">8. Enlaces</a>
+
+<!--8 Enlaces-->
+<li><a href="./ejercicio25.html">Enlaces</a></li>
 <pre>
         [EJERCICIO 6] Enlaces favoritos
 </pre>
-<a href="www.twitch.com">9. Listas</a>
+<!--9 Listas-->
+<li><a href="www.twitch.com">Listas</a></li>
 <pre>
         [EJERCICIO 7] Listas de enlace
 </pre>
-<a href="./">10. Imágenes</a>
+<!--10 Imagenes-->
+<li><a href="./ejercicio17.html">Imágenes</a></li>
 <pre>
         [EJERCICIO 8] Receta de patatas fritas
 </pre>
-<a href="./">11. Tablas</a>
+<!--11 Tablas-->
+<li><a href="./ejercicio31.html">Tablas</a></li>
 <pre>
         [EJERCICIO 9] Grupo de música(Queen)
 </pre>
-<a href="./">12. Divisiones</a>
+<!--12 Divisiones-->
+<li><a href="./ejercicio22.html">Divisiones</a></li>
 <pre>
         [EJERCICIO 10] Diseño fluido con dos columnas
 </pre>
-<a href="./">13. Formularios</a>
+<!--13 Formularios-->
+<li><a href="./ejercicio2.html">Formularios</a></li>
 <pre>
         [EJERCICIO 11] Notificar una incidencia
 </pre>
+
+</ol>
 </body>
 
 </html>
