--- a/boletin-ejercicioUD3/ejercicio31.html
+++ b/boletin-ejercicioUD3/ejercicio31.html
@@ -12,7 +12,7 @@
     <h1>Tutorial de MySQL</h1>
     <a href="">Introducción</a>
     <br>
-    <a href="">Show databases</a>
+    <a href="www.youtube.com">Show databases</a>
     <br>
     <a href="">Creación de una tabla y mostrar sus campos</a>
     <br>
