--- a/boletin-ejercicioUD3/ejercicio27.html
+++ b/boletin-ejercicioUD3/ejercicio27.html
@@ -17,28 +17,29 @@
     4. <a href="https://es.wikipedia.org/wiki/Esponja">Esponjas</a>
     5. <a href="https://es.wikipedia.org/wiki/Nematoda">Nematodos</a>
     </pre>
-
-    <h2>1. Artrópodos</h2>
-    <p>Exoesqueleto de quitina y patas articuladas</p>
-
-    <p>Fotografía</p>
-
-    <h2>2. Equinodermos</h2>
-    <p>Simetría pentarradiada, esqueleto externo de piezas calcáreas.</p>
+    <dt>
+    <dt><h2>1. Artrópodos</h2></dt>
+    <dd><p>Exoesqueleto de quitina y patas articuladas</p></dd>
 
     <p>Fotografía</p>
 
-    <h2>3. Moluscos</h2>
-    <p>Boca con rádula, pie muscular y manto alrededor de la concha.</p>
+    <dt><h2>2. Equinodermos</h2></dt>
+    <dd><p>Simetría pentarradiada, esqueleto externo de piezas calcáreas.</p></dd>
 
     <p>Fotografía</p>
 
-    <h2>4. Esponjas</h2>
-    <p>Parazoos; sin simetría definida; cuerpo perforado por poros inhalantes</p>
+    <dt><h2>3. Moluscos</h2></dt>
+    <dd><p>Boca con rádula, pie muscular y manto alrededor de la concha.</p></dd>
+
     <p>Fotografía</p>
 
-    <h2>5. Nematodos</h2>
-    <p>Gusanos pseudocelomados de sección circular</p>
+    <dt><h2>4. Esponjas</h2></dt>
+    <dd><p>Parazoos; sin simetría definida; cuerpo perforado por poros inhalantes</p></dd>
     <p>Fotografía</p>
+
+    <dt><h2>5. Nematodos</h2></dt>
+    <dd><p>Gusanos pseudocelomados de sección circular</p></dd>
+    <p>Fotografía</p>
+    </dl>
 </body>
 </html>
