--- a/boletin-ejercicioUD3/ejercicio63.html
+++ b/boletin-ejercicioUD3/ejercicio63.html
@@ -15,10 +15,20 @@
         <ul><li type="A">Comando Unix</li></ul>
         <ul><li type="A">Editor de texto Vim</li></ul>
     <li type="I">HTML</li>
-        <ul><li type="A">Página mínima</li></ul>
-        <ul><li type="A">Cabeceras</li></ul>
-        <ul><li type="A">Etiquetas</li></ul>
-
+        <ul>
+            <li type="A">Página mínima</li>
+            <li type="A">Cabeceras</li>
+            <li type="A">Etiquetas</li>
+            <li type="A">Listas</li>
+                <ul type="i"><li>No ordenadas</li></ul>
+                <ul><li>Ordenadas</li></ul>
+                <ul><li>De definición</li></ul>
+                <ul><li>Anidadas</li></ul>
+            <li type="A">Enlaces</li>
+                <ul><li>Absolutos</li></ul>
+                <ul><li>Relativos</li></ul>
+            <li type="A">Imágenes</li>
+        </ul>
 </ul>
 </body>
 </html>
