--- a/boletin-ejercicioUD3/ejercicio63.html
+++ b/boletin-ejercicioUD3/ejercicio63.html
@@ -20,15 +20,39 @@
             <li type="A">Cabeceras</li>
             <li type="A">Etiquetas</li>
             <li type="A">Listas</li>
-                <ul type="i"><li>No ordenadas</li></ul>
-                <ul><li>Ordenadas</li></ul>
-                <ul><li>De definición</li></ul>
-                <ul><li>Anidadas</li></ul>
+                <ul style="list-style-type: lower-roman;"><li>No ordenadas</li>
+                <li>Ordenadas</li>
+                <li>De definición</li>
+                <li>Anidadas</li></ul>
             <li type="A">Enlaces</li>
-                <ul><li>Absolutos</li></ul>
-                <ul><li>Relativos</li></ul>
+                <ul style="list-style-type: lower-roman;"><li>Absolutos</li>
+                <li>Relativos</li></ul>
             <li type="A">Imágenes</li>
         </ul>
+    <li type="I">CSS</li>
+        <ul>
+            <li type="A">Anatomía</li>
+            <li type="A">Selectores básicos</li>
+                <ul style="list-style-type: lower-roman;">
+                    <li>Elemento</li>
+                    <li>Clase</li>
+                    <li>ID</li>
+                    <li>Grupo</li>
+                </ul>
+            <li type="A">El DOM</li>
+            <li type="A">Selectores avanzados</li>
+            <li type="A">Modelo de caja</li>
+        </ul>
+    <li type="I">Programación</li>
+        <ol type="A">
+            <li>Python</li>
+            <li>JavaScript</li>
+        </ol>
+    <li type="I">Bases de datos</li>
+        <ol type="A">
+            <li>Archivo plano</li>
+            <li>Relaciones</li>
+        </ol>
 </ul>
 </body>
 </html>
