--- a/boletin-ejercicioUD3/ejercicio65.html
+++ b/boletin-ejercicioUD3/ejercicio65.html
@@ -9,28 +9,50 @@
 </head>
 
 <body>
-<ul>
-    <li>Main Category 1</li>
-        <ul><li>Subcategory 1.1</li></ul>
-        <ul><li>Sybcategory 1.2</li></ul>
-    <li>Main Category 2</li>
-        <ul><li>Subcategory 2.1</li></ul>
-        <ul><li>Subcategory 2.2</li></ul>
-</ul>
+    <ul>
+        <li>Main Category 1</li>
+        <ul>
+            <li>Subcategory 1.1</li>
+        </ul>
+        <ul>
+            <li>Sybcategory 1.2</li>
+        </ul>
+        <li>Main Category 2</li>
+        <ul>
+            <li>Subcategory 2.1</li>
+        </ul>
+        <ul>
+            <li>Subcategory 2.2</li>
+        </ul>
+    </ul>
 
-<h1>Nested Ordered List with Start Attribute</h1>
+    <h1>Nested Ordered List with Start Attribute</h1>
 
-<ol start="5">
-    <li>First main item</li>
+    <ol start="5">
+        <li>First main item</li>
         <ol type="a">
             <li>First nested item</li>
             <li>Second nested item</li>
         </ol>
-    <li>Second mian item</li>
+        <li>Second mian item</li>
         <ol type="a">
             <li>Third nested item</li>
             <li>Fourth nested item</li>
         </ol>
-</ol>
+    </ol>
+    <h1>Mixed Nested List</h1>
+    <ul>
+        <li>Web Develoopment</li>
+        <ol type="1">
+            <li>HTML</li>
+            <li>CSS</li>
+            <ul type="square">
+                <li>Flexbox</li>
+                <li>Grid</li>
+            </ul>
+            <li>JavaScript</li>
+        </ol>
+    </ul>
 </body>
+
 </html>
