--- a/Ejercicios multimedia/paginaWeb.html
+++ b/Ejercicios multimedia/paginaWeb.html
@@ -11,8 +11,10 @@
 
 <body>
 
-<img src="../assets/images/">
-<audio src="../assets/audio/">
+<img width="30%" src="../assets/images/A5K4C4IEGZPUNMIOROONCU7TXE.jpg">
+<audio src="../assets/audio/windows-hardware-insert.mp3" controls preload="auto">
+
+</audio>
 
 </body>
 </html>
