--- a/Ejercicio tablas/ej1.html
+++ b/Ejercicio tablas/ej1.html
@@ -26,24 +26,29 @@
                 Subtotal
             </th>
         </tr>
-
+        <!--Fila 1-->
         <tr>
             <td>Reproductor MP3</td>
             <td>192.02</td>
             <td>1</td>
             <td>192.02</td>
+        </tr>
+        <!--Fila 2-->
         <tr>
             <td>Fundas de colores</td>
             <td>2.50</td>
             <td>5</td>
             <td>12.50</td>
         </tr>
+        <!--Fila 3-->
         <tr>
+
             <td>Reproductor de radio & control remoto</td>
             <td>12.99</td>
             <td>1</td>
             <td>12.99</td>
         </tr>
+        <!--Fila 4-->
         <tr>
             <td><strong>TOTAL</strong></td>
             <td>-</td>
