--- a/tablasEstilos.html
+++ b/tablasEstilos.html
@@ -28,7 +28,7 @@
         </tr>
 
         <tr>
-            <td style="color: white; background-color: rgb(181, 240, 19); font: bold;">Kiwi</td>
+            <td style="color: red; background-color: rgb(181, 240, 19); font: bold;">Kiwi</td>
             <td>5€</td>
             <td>1/2 dias</td>
         </tr>
