--- a/boletin-ejercicioUD3/ejercicio15.html
+++ b/boletin-ejercicioUD3/ejercicio15.html
@@ -63,7 +63,7 @@
     <tr class="azul">
         <td>López</td>
         <td>José Antonio</td>
-        <td rowspan="2">Moreno</td>
+        <td rowspan="2" class="verde">Moreno</td>
         <td rowspan="9" class="verde">Hombre</td>
         <td>40</td>
     </tr>
@@ -76,22 +76,22 @@
     </tr>
 
     <tr class="azul">
-        <td rowspan="2">Sicardo</td>
-        <td rowspan="2">Raya</td>
+        <td rowspan="2" class="verde">Sicardo</td>
+        <td rowspan="2" class="verde">Raya</td>
         <td>Cristo</td>
-        <td rowspan="2">Moreno</td>
+        <td rowspan="2" class="verde">Moreno</td>
         <td>29</td>
     </tr>
 
     <tr class="azul">
-        <td rowspan="2">Miguel Ángel</td>
+        <td rowspan="2" class="verde">Miguel Ángel</td>
         <td>23</td>
     </tr>
 
     <tr class="azul">
         <td>Benitez</td>
         <td>Reyes</td>
-        <td rowspan="2">Castaño</td>
+        <td rowspan="2" class="verde">Castaño</td>
         <td>18</td>
     </tr>
 
@@ -106,13 +106,13 @@
         <td>Jiménez</td>
         <td>Peña</td>
         <td>Juan Luis</td>
-        <td rowspan="2">Moreno</td>
+        <td rowspan="2" class="verde">Moreno</td>
     </tr>
 
     <tr class="azul">
         <td>Lima</td>
         <td>López</td>
-        <td rowspan="2">Jesús</td>
+        <td rowspan="2" class="verde">Jesús</td>
 
         <td rowspan="2" class="verde">19</td>
     </tr>
