--- a/boletin-ejercicioUD3/ejercicio15.html
+++ b/boletin-ejercicioUD3/ejercicio15.html
@@ -70,7 +70,7 @@
 
     <tr class="azul">
         <td>Ariza</td>
-        <td>Rosales</td>
+        <td>Rosales</td>2
         <td>Jorge</td>
         <td>21</td>
     </tr>
