--- a/Ejercicios multimedia/paginaWeb.html
+++ b/Ejercicios multimedia/paginaWeb.html
@@ -10,12 +10,18 @@
 </head>
 
 <body>
-<h2>Imagenes del Ejercicio</h2>
-<img width="30%" src="../assets/images/A5K4C4IEGZPUNMIOROONCU7TXE.jpg" alt="Imagen/archivo .jpg">
+    <div id="cabecera">
+        <h1>Ejercicios Multimedia</h1>
+    </div>
 
-<img width="30%" src="../assets/images/A5K4C4IEGZPUNMIOROONCU7TXE.jpg" alt="Imagen/archivo .jpg">
+    <h2>Imagenes del Ejercicio</h2>
+    <div id="imagen">
+        <img width="25%" src="../assets/images/A5K4C4IEGZPUNMIOROONCU7TXE.jpg" alt="Imagen/archivo .jpg">
 
-<img src="../assets/images/Logo.png" width="40%" alt="Imagen/archivo .png">
+        <img width="25%" src="../assets/images/A5K4C4IEGZPUNMIOROONCU7TXE.jpg" alt="Imagen/archivo .jpg">
+
+        <img src="../assets/images/Logo.png" width="20%" alt="Imagen/archivo .png">
+    </div>
 <hr>
 <h2>Ejercicios de audio</h2>
 
@@ -31,22 +37,21 @@
 
 <h2>Ejercicios de video</h2>
 
-<video src="../assets/video/GatoMeme.mp4" controls preload="auto" width="70%">
-    <p>Su navegador no soporta videos</p>
-</video>
+<div id="pie">
+    <video src="../assets/video/GatoMeme.mp4" controls preload="auto" width="45%">
+        <p>Su navegador no soporta videos</p>
+    </video>
 
-<video src="../assets/video/TortugaMeme.mp4" controls preload="auto" width="70%" height="20%">
-    <p>Su navegador no soporta videos</p>
-</video>
+    <video src="../assets/video/TortugaMeme.mp4" controls preload="auto" width="45%" height="20%">
+        <p>Su navegador no soporta videos</p>
+    </video>
 
-<video src="../assets/video/TortugaMeme.mp4" controls preload="auto" width="70%" height="20%">
-    <p>Su navegador no soporta videos</p>
-</video>
-
+    <video src="../assets/video/TortugaMeme.mp4" controls preload="auto" width="45%" height="20%">
+        <p>Su navegador no soporta videos</p>
+    </video>
+</div>
 <hr>
-<!--
-<iframe width="" height="" ></iframe>
--->
+
 <iframe width="560" height="315" src="https://www.youtube.com/embed/A30gsOSHswM?si=e3jFgCh9RnnIBBHm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 <iframe src="https://www.diariodejerez.es/" frameborder="0" width="600" height="300"></iframe>
