--- a/boletin-ejercicioUD3/ejercicio85.html
+++ b/boletin-ejercicioUD3/ejercicio85.html
@@ -23,5 +23,17 @@
     <li>SEGUNDA LISTA</li>
 </ul>
 
+<ol type="I">
+    <li>Tercera lista</li>
+    <li>Tercera lista</li>
+    <li>Tercera lista</li>
+</ol>
+
+<ol style="list-style-type: lower-greek;">
+    <li>Cuarta LISTA</li>
+    <li>Cuarta LISTA</li>
+    <li>Cuarta LISTA</li>
+</ol>
+
 </body>
 </html>
