--- a/boletin-ejercicioUD3/ejercicio51.html
+++ b/boletin-ejercicioUD3/ejercicio51.html
@@ -15,6 +15,32 @@
 
 <body>
 
-    
+<table border="1" style="width: 450px; height: 350px; background-color: grey; text-align: center;">
+    <tr>
+        <td>A</td>
+        <td>B</td>
+        <td>C</td>
+        <td>D</td>
+    </tr>
+
+    <tr>
+        <td rowspan="2">E,I</td>
+        <td>F</td>
+        <td colspan="3">G,H</td>
+    </tr>
+
+    <tr>
+        <td>J</td>
+        <td rowspan="2">K,O</td>
+        <td>L</td>
+    </tr>
+
+    <tr>
+        <td>M</td>
+        <td>N</td>
+        <td>P</td>
+    </tr>
+</table>
+
 </body>
 </html>
