--- a/Ejercicios Colores/EJ1 color.html
+++ b/Ejercicios Colores/EJ1 color.html
@@ -33,7 +33,7 @@
 
 <p style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; font-size: 14px; color: yellow;">Impact, Tamaño 14, Color De Letra Amarillo 6, efecto Titulo.</p>
 
-<p style="">Times New Roman, Tamaño 16, negrita, color de letra Cian, Versalitas, color de resalte azul 5</p>
+<p style="font-family: 'Times New Roman', Times, serif; font-size: 16px; background-color: blue; color: rgb(22, 238, 227);">Times New Roman, Tamaño 16, negrita, color de letra Cian, Versalitas, color de resalte azul 5</p>
 
 
 
