--- a/boletin-ejercicioUD3/ejercicio59.html
+++ b/boletin-ejercicioUD3/ejercicio59.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ejercicio58</title>
+    <title>ejercicio59</title>
     <link rel="icon" href="./assets/images/Logo.png">
     <meta name="description" content="Esto es la descripción de mi página web">
     <meta name="keywords" content="html, ejercicio, ejercicio1, ejemplo">
@@ -15,12 +15,33 @@
 
 <body>
 
-    <table border="2" style="border-style: double; border-color: rgb(42, 129, 230); width: 300px; height: 200px; border-width: 12px; border-collapse: collapse;">
+    <table border="2" style="border-style: double; border-color: rgb(42, 129, 230); width: 700px; height: 300px; border-width: 12px; text-align: center;">
+
         <tr>
-            <td rowspan="3" style="transform: rotate(90deg);">Ejemplo</td>
+            <td rowspan="3"><span style="display: inline-block;transform: rotate(-90deg);">EJEMPLO</span></td>
+            <td colspan="9">PRÁCTICA DE TABLAS</td>
         </tr>
 
+        <tr>
+            <td colspan="5">Creación de tablas</td>
+            <td>1</td>
+            <td>2</td>
+            <td>3</td>
+            <td>4</td>
+        </tr>
 
+        <tr>
+            <td>Uno</td>
+            <td>Dos</td>
+            <td>Tres</td>
+            <td>Cuatro</td>
+            <td>Cinco</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        
     </table>
 
 </body>
