--- a/boletin-ejercicioUD3/ejercicio7.html
+++ b/boletin-ejercicioUD3/ejercicio7.html
@@ -52,10 +52,10 @@
     </label>
 
     <input type="text" name="nombre" value="" />
-</form>
+    <br><br>
 
-<!--Formulario Genero-->
-<form action="post" action="/send/">
+<!-- Segunda sección-->
+
     Sexo<br>
     <input type="radio" name="sexo" value="hombre" checked="checked">Hombre
     <br>
@@ -67,7 +67,10 @@
     <br> <br>
     <input type="checkbox" name="boletin" checked="checked">
     Suscribeme al boletin de novedades
-   
+
+    <br> <br>
+    <input type="submit" value="Guardar Cambios">
+    <input type="reset" value="Borrar todos los datos introducidos">
 
 </form>
 
