--- a/boletin-ejercicioUD3/ejercicio40.html
+++ b/boletin-ejercicioUD3/ejercicio40.html
@@ -9,10 +9,25 @@
 </head>
 
 <body>
+    <h1>Rellena tu CV</h1>
 <form action="post" action="/send/">
 
+    <label>
+        <br>
+        Datos personales
+        <br>
+        Provincia
+    </label>
+    <!--Provincias-->
+    <select>
+        <option value="1">Cadiz</option>
+        <option value="2">Almeria</option>
+        <option value="3">Sevilla</option>
+        <option value="4">Cordoba</option>
+    </select>
 
-    
+    <!--Fecha nacimiento-->
+
 </form>
 
 </body>
