--- a/Examen Simulacro/examen.html
+++ b/Examen Simulacro/examen.html
@@ -37,15 +37,15 @@
 político y abogado sudafricano. Fue presidente de la República de Sudáfrica de
 1994 a 1999. <a href="">Wikipedia</a></p>
 
-<table border="0" style="">
+<table border="0">
     <tr>
         <td id="tablaF">Fecha de nacimiento</td>
-        <td colspan="3" style="border-bottom: 2px solid; border-color: green;">18 de julio de 1918, Mvezo, Sudáfrica</td>
+        <td style="border-bottom: 2px solid; border-color: green;" colspan="3">18 de julio de 1918, Mvezo, Sudáfrica</td>
     </tr>
 
-    <tr>
-        <td id="tablaF">Fecha de la muerte</td>
-        <td colspan="3" style="border-bottom: 2px solid; border-color: green;">5 de diciembre de 2013</td>
+    <tr >
+        <td id="tablaF"> Fecha de la muerte</td>
+        <td style="border-bottom: 2px solid; border-color: green;" colspan="3">5 de diciembre de 2013</td>
     </tr>
 
     <tr>
@@ -68,7 +68,8 @@ político y abogado sudafricano. Fue presidente de la República de Sudáfrica d
         <td style="border-bottom: 2px solid; border-color: green;">Evelyn Mase (m.1944–1958)</td>
     </tr>
 </table>
-<hr style="color: green;">
+
+<hr color= green>
 <h2>Biografía</h2>
 
 <p>Nelson Mandela nació el 18 de julio de 1918 en Mvezo, un poblado de 300
@@ -99,7 +100,7 @@ Zindziswa (Zindzi), nacida en 1960.
 En su 80 cumpleaños, el 18 de julio de 1998, contrajo matrimonio con Graça
 Machel, la viuda de Samora Machel, expresidente de Mozambique y patrocinador
 del ANC, fallecido en 1986 en un accidente de avión.</p>
-<hr>
+<hr color="green">
 <h2>Fotografías</h2>
 <img src="../assets/imgExamen/mandela1.jpg" alt="mandela1" style="width: 30%; height: 230px; border: solid gray;">
 <br>
@@ -113,25 +114,25 @@ del ANC, fallecido en 1986 en un accidente de avión.</p>
 <h2>Frases</h2>
 <ol>
     <li>“La mayor gloria no es caer, sino levantarse siempre”.</li>
-    <br>
+
     <li>“Si yo tuviera el tiempo en mis manos haría lo mismo otra vez. Lo mismo
     que haría cualquier hombre que se atreva a llamarse a sí mismo hombre”.</li>
-    <br>
+
     <li>“Detesto el racismo, porque lo veo como algo barbárico, ya sea que venga
     de un hombre negro o un hombre blanco”.</li>
-    <br>
+
     <li>“Si quieres hacer las paces con tu enemigo, tienes que trabajar con tu
     enemigo. Entonces él se vuelve tu compañero”.</li>
-    <br>
+
     <li>“Nunca pienso en el tiempo que he perdido. Solo desarrollo un programa
     que ya está ahí. Que está trazado para mí”.</li>
-    <br>
+
     <li>“Nunca me he considerado un hombre como mi superior, ni en mi vida
     fuera ni dentro de la cárcel”.</li>
-    <br>
+
     <li>"Me gustan los amigos que tienen pensamientos independientes porque
     suelen hacerte ver los problemas desde todos los ángulos"</li>
-    <br>
+
     <li>“Yo no tenía una creencia específica excepto que nuestra causa era justa,
     era fuerte y estaba ganando cada vez más apoyo y más terreno”.</li>
 </ol>
@@ -144,13 +145,23 @@ del ANC, fallecido en 1986 en un accidente de avión.</p>
     Tu e-mail: <br>
     <input type="text">
     <br> <br>
-    Valora la vida de Nelson Mandela Entre 0 y 10 <br>
-    <input type="radio">
-
+    <fieldset>
+    <legend>Valora la vida de Nelson Mandela Entre 0 y 10 <br></legend>
+    <input type="radio" value="1">1
+    <input type="radio" value="2">2
+    <input type="radio" value="3">3
+    <input type="radio" value="4">4
+    <input type="radio" value="5">5
+    <input type="radio" value="6">6
+    <input type="radio" value="7">7
+    <input type="radio" value="8">8
+    <input type="radio" value="9">9
+    <input type="radio" value="10">10
     <br>
+    </fieldset>
     Opinión:
     <br>
-    <textarea name="mandela" id="opinionMandela" rows="6" cols="50"></textarea>
+    <textarea name="mandela" id="opinionMandela" rows="6" cols="50">Escribe aqui tu opinion sobre Nelson Mandela...</textarea>
 </form>
 <hr color="green">
 </body>
