examen simulacro cambios

--- a/Examen Simulacro/examen.html
+++ b/Examen Simulacro/examen.html
@@ -113,6 +113,7 @@ del ANC, fallecido en 1986 en un accidente de avión.</p>
 <hr color="green">
 <h2>Frases</h2>
 <ol>
+    <em>
     <li>“La mayor gloria no es caer, sino levantarse siempre”.</li>
 
     <li>“Si yo tuviera el tiempo en mis manos haría lo mismo otra vez. Lo mismo
@@ -135,8 +136,10 @@ del ANC, fallecido en 1986 en un accidente de avión.</p>
 
     <li>“Yo no tenía una creencia específica excepto que nuestra causa era justa,
     era fuerte y estaba ganando cada vez más apoyo y más terreno”.</li>
+    </em>
 </ol>
 <hr color="green">
+<h2>Firma</h2>
 <img src="../assets/imgExamen/MandelaSignature.png" alt="">
 <hr color="green">
 <h2>Opinión</h2>
