--- a/Examen/FormularioExamenHtml5.html
+++ b/Examen/FormularioExamenHtml5.html
@@ -45,18 +45,26 @@ Estudios elegidos <input type="text"> <br>
 Nombre <input type="text"> <br>
 Apellidos <input type="text"> <br>
 Email <input type="text">
-</form>
 </fieldset>
 
 <fieldset>
 <legend>Rellene las opciones siguientes</legend>
-<form action="get" action="insertar_cv.html"></form>
 
-
-
-
-
+<input type="checkbox"> Windows
+<input type="checkbox"> Mac
+<input type="checkbox"> Linux
+<br>
+Elija una hora: <input type="time">
+<br>
+<input type="radio"> AMD
+<input type="radio"> Intel i5
+<input type="radio"> Intel i7
+<br>
+Elija un fichero: <input type="file">
 </fieldset>
+<br> <br> <br> <br>
+<input type="submit" value="Enviar Formulario"> <input type="reset" value="Borrar los datos introducidos">
 
+</form>
 </body>
 </html>
